--- a/main.ipynb
+++ b/main.ipynb
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
     "plt.grid(True, linestyle='--', alpha=0.7)\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
